# compiler

./: .gitignore  .hidden  Akinator_Functions.h  CMakeLists.txt  Function_in_get_code.h  Makefile  README.md  Tree_Functions.h  a.out.superlib  commands.h  compiler_functions_h.h  dump.gv  enum_types.h  factorial.txt  gets.h  in.asm  list_dump.gv  list_functions.h  list_h.h  main.cpp  noproc_factorial.txt  noproc_kvadr.txt  printff.asm  proga.asm  super_file.asm  supercmd.h  test.txt  to_asm_functions.h  to_asm_h.h  to_new_asm_functions.h  tree_h.h  types.h  types_with_code.h
